--- a/WpfApp1/common library/common_library.csproj
+++ b/WpfApp1/common library/common_library.csproj
@@ -42,8 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
-    <Compile Include="model\Role.cs" />
-    <Compile Include="model\User.cs" />
+    <Compile Include="model\UserHandling\Role.cs" />
+    <Compile Include="model\UserHandling\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="repository\UserDbContext.cs" />
   </ItemGroup>
