--- a/WpfApp1/publicWPF/publicWPF.csproj
+++ b/WpfApp1/publicWPF/publicWPF.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
+  </ItemGroup>
+
 </Project>
